edit build.sbt and tests